texte : yes, image : yes, video : non